# nepse-data

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py  test.py
data/: nica.csv  test.csv
nepse-data/: __init__.py  automation.py
nepse_data/: __init__.py  automation.py  src.py
