[metadata]
name = nepse-data
version = 0.0.1
author = Keshav Khanal
author_email = me.keskhanal@gmail.com
description = For getting the stock price of companies that are listed in Nepse
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/keskhanal/nepse-data
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True